--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ziyan web dev</title>
+    <style>
+        h3{
+            text-decoration: underline;
+            color: blueviolet;
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
-    <h1>GHULAM MURTAZA</h1>
-    <h2>hello brother </h2>
-    <img width="300" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/-127wiki.jpg/640px--127wiki.jpg">
-    <a style="color:rgb(195, 0, 255); text-decoration: none;" target="_blank" href="https://ziyanali.medium.com">hello jee</a>
-    <input type="password">
+    <h1>Blog</h1> 
+    <article> 
+        <h3 id="firstHeading">
+            UI iteractions of the week
+        </h3> 
+        <div>
+            12 Feb 2019 | Express, Handlebars
+        </div> 
+        <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+        </p> 
+    </article>
+    <article> 
+        <h3 id="secondHeading">
+            UI iteractions of the week
+        </h3> 
+        <div>
+            12 Feb 2019 | Express, Handlebars
+        </div> 
+        <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+        </p> 
+    </article>
+    <article> 
+        <h3>
+            UI iteractions of the week
+        </h3> 
+        <div>
+            12 Feb 2019 | Express, Handlebars
+        </div> 
+        <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+        </p> 
+    </article>
+    
 </body>
 <script src="main.js">
 </script>
