--- a/index.html
+++ b/index.html
@@ -4,44 +4,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ziyan web dev</title>
-    <style>
-        h3{
-            text-decoration: underline;
-            color: blueviolet;
-            background-color: black;
-        }
-    </style>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    </head>
 <body>
     <h1>Blog</h1> 
-    <article> 
-        <h3 id="firstHeading">
+    <articl class="blog-item"> 
+        <h3 class="recent">
             UI iteractions of the week
         </h3> 
         <div>
-            12 Feb 2019 | Express, Handlebars
+           <span class="date">12 Feb 2019</span> | <span class="detail">Express, Handlebars</span>
+        </div> 
+        <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+        </p> 
+    </articl>
+    <article class="blog-item"> 
+        <h3 class="recent">
+            UI iteractions of the week
+        </h3> 
+        <div>
+            <span class="date">12 Feb 2019</span> | <span class="detail">Express, Handlebars</span>
         </div> 
         <p>
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
         </p> 
     </article>
-    <article> 
-        <h3 id="secondHeading">
+    <article class="blog-item"> 
+        <h3 class="recent">
             UI iteractions of the week
         </h3> 
         <div>
-            12 Feb 2019 | Express, Handlebars
-        </div> 
-        <p>
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-        </p> 
-    </article>
-    <article> 
-        <h3>
-            UI iteractions of the week
-        </h3> 
-        <div>
-            12 Feb 2019 | Express, Handlebars
+            <span class="date">12 Feb 2019</span> | <span class="detail">Express, Handlebars</span>
         </div> 
         <p>
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
