--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 <body>
     <h1>Blog</h1> 
-    <articl class="blog-item"> 
+    <article class="blog-item"> 
         <h3 class="recent">
             UI iteractions of the week
         </h3> 
@@ -21,7 +21,7 @@
         <p>
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
         </p> 
-    </articl>
+    </article>
     <article class="blog-item"> 
         <h3 class="recent">
             UI iteractions of the week
