--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
         </p> 
     </article>
+    <button><a href="/button.html" target="blank">click me</a></button>
     
 </body>
 <script src="main.js">
