portfolio header and section 1 done

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
         </nav>
     </header>
     <section class="hero-section">
-        <div calss="hero-inner">
+        <div class="hero-inner">
             <div class="col-left">
-                <h3>Hi, I am John,
-                    Creative Technologist</h3>
+                <h1>Hi, I am Ziyan,</h1>
+                <h1>Creative Technologist</h1>
                 <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                <button>
+                <div class="action-button">
                     Download Resume
-                </button>
+                </div>
             </div>
             <div class="col-right">
-                <img src="./image/avatar.jpg " alt="Avatar">
+                <img src="./image/avatar.png " alt="Avatar">
             </div>
         </div>
     </section>
