--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         Making a design system from scratch
                     </h3>
                     <div>
-                        <span class="date">12 Feb 2019</span> | <span class="detail">Express, Handlebars</span>
+                        <span class="date">12 Feb 2020</span> | <span class="detail">Design, Pattern</span>
                     </div>
                     <p>
                         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.                    </p>
@@ -64,7 +64,7 @@
                         Creating pixel perfect icons in Figma                    
                     </h3>
                     <div>
-                        <span class="date">12 Feb 2019</span> | <span class="detail">Express, Handlebars</span>
+                        <span class="date">12 Feb 2020</span> | <span class="detail">Figma, Icon Design</span>
                     </div>
                     <p>
                         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
