--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +33,7 @@
                 <h1>Creative Technologist</h1>
                 <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                 <div class="action-button">
-                    <a href="https://www.linkedin.com/in/ziyanalimurtaza/" style="text-decoration: none;">Linkedin Profile</a>
+                    <a href="https://www.linkedin.com/in/ziyanalimurtaza/">Linkedin Profile</a>
                 </div>
             </div>
             <div class="col-right">
@@ -53,8 +52,10 @@
                     <h3>
                         Making a design system from scratch
                     </h3>
-                    <div>
-                        <span class="date">12 Feb 2020</span> | <span class="detail">Design, Pattern</span>
+                    <div class="meta">
+                        <span class="date">12 Feb 2020</span>
+                        <span>|</span>
+                        <span class="detail">Design, Pattern</span>
                     </div>
                     <p>
                         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.                    </p>
@@ -63,8 +64,10 @@
                     <h3>
                         Creating pixel perfect icons in Figma                    
                     </h3>
-                    <div>
-                        <span class="date">12 Feb 2020</span> | <span class="detail">Figma, Icon Design</span>
+                    <div class="meta">
+                        <span class="date">12 Feb 2020</span>
+                        <span>|</span>
+                        <span class="detail">Figma, Icon Design</span>
                     </div>
                     <p>
                         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
@@ -73,5 +76,67 @@
             </div>
         </div>
     </section>
+    <section class="featured-section">
+        <div class="featured-inner">
+            <div class="featured-header">
+                <h2>Featured Works</h2>
+            </div>
+            <div class="featured-list">
+                <div class="featured-item">
+                    <div class="fs-left">
+                        <img src="./image/Rectangle 30.png" alt="first-image">
+                    </div>
+                    <div class="fs-right">
+                        <h3>Designing web structures</h3>
+                        <div class="fs-mid">
+                            <div class="badge">2022</div>
+                            <div class="category">
+                                Web Design 
+                            </div>
+                        </div>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>  
+                    </div>
+                </div>
+            </div>
+            <!-- second post section-->
+            <div class="featured-list">
+                <div class="featured-item">
+                    <div class="fs-left">
+                        <img src="./image/Rectangle 32.png" alt="second-image">
+                    </div>
+                    <div class="fs-right">
+                        <h3>Vibrant Portraits of 2020</h3>
+                        <div class="fs-mid">
+                            <div class="badge">2018</div>
+                            <div class="category">
+                                Illustration 
+                            </div>
+                        </div>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>  
+                    </div>
+                </div>
+            </div>
+            <!-- third post section-->
+            <div class="featured-list">
+                <div class="featured-item">
+                    <div class="fs-left">
+                        <img src="./image/Rectangle 34.png" alt="third-image">
+                    </div>
+                    <div class="fs-right">
+                        <h3>36 Days of Malayalam type</h3>
+                        <div class="fs-mid">
+                            <div class="badge">2015</div>
+                            <div class="category">
+                                Typography 
+                            </div>
+                        </div>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>  
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>hello
+    </footer>
 </body>
 </html>
