mobile version and footer

--- a/index.html
+++ b/index.html
@@ -136,7 +136,14 @@
             </div>
         </div>
     </section>
-    <footer>hello
+    <footer>
+        <div class="social-icons">
+            <img src="./image/insta.svg">
+            <img src="./image/linkedin.svg">
+            <img src="./image/twitter.svg">
+            <img src="./image/fb.svg">
+        </div>
+        <p>Copyright ©2020 All rights reserved</p>
     </footer>
 </body>
 </html>
