--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="index.html">work</a>
                 </li>
                 <li>
-                    <a href="blog-page.html">blog</a>
+                    <a href="https://ziyanali.medium.com" target="_blank">blog</a>
                 </li>
                 <li>
                     <a href="button.html">contact</a>
