social icons blog content

--- a/index.html
+++ b/index.html
@@ -81,56 +81,58 @@
             <div class="featured-header">
                 <h2>Featured Works</h2>
             </div>
-            <div class="featured-list">
-                <div class="featured-item">
-                    <div class="fs-left">
-                        <img src="./image/Rectangle 30.png" alt="first-image">
-                    </div>
-                    <div class="fs-right">
-                        <h3>Designing web structures</h3>
-                        <div class="fs-mid">
-                            <div class="badge">2022</div>
-                            <div class="category">
-                                Web Design 
-                            </div>
+            <div class="control">
+                <div class="featured-list">
+                    <div class="featured-item">
+                        <div class="fs-left">
+                            <img src="./image/Rectangle 30.png" alt="first-image">
                         </div>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>  
+                        <div class="fs-right">
+                            <h3>Designing web structures</h3>
+                            <div class="fs-mid">
+                                <div class="badge">2022</div>
+                                <div class="category">
+                                    Web Design 
+                                </div>
+                            </div>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>  
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- second post section-->
-            <div class="featured-list">
-                <div class="featured-item">
-                    <div class="fs-left">
-                        <img src="./image/Rectangle 32.png" alt="second-image">
-                    </div>
-                    <div class="fs-right">
-                        <h3>Vibrant Portraits of 2020</h3>
-                        <div class="fs-mid">
-                            <div class="badge">2018</div>
-                            <div class="category">
-                                Illustration 
-                            </div>
+                <!-- second post section-->
+                <div class="featured-list">
+                    <div class="featured-item">
+                        <div class="fs-left">
+                            <img src="./image/Rectangle 32.png" alt="second-image">
                         </div>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>  
+                        <div class="fs-right">
+                            <h3>Vibrant Portraits of 2020</h3>
+                            <div class="fs-mid">
+                                <div class="badge">2018</div>
+                                <div class="category">
+                                    Illustration 
+                                </div>
+                            </div>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>  
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- third post section-->
-            <div class="featured-list">
-                <div class="featured-item">
-                    <div class="fs-left">
-                        <img src="./image/Rectangle 34.png" alt="third-image">
-                    </div>
-                    <div class="fs-right">
-                        <h3>36 Days of Malayalam type</h3>
-                        <div class="fs-mid">
-                            <div class="badge">2015</div>
-                            <div class="category">
-                                Typography 
-                            </div>
+                <!-- third post section-->
+                <div class="featured-list">
+                    <div class="featured-item">
+                        <div class="fs-left">
+                            <img src="./image/Rectangle 34.png" alt="third-image">
                         </div>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>  
+                        <div class="fs-right">
+                            <h3>36 Days of Malayalam type</h3>
+                            <div class="fs-mid">
+                                <div class="badge">2015</div>
+                                <div class="category">
+                                    Typography 
+                                </div>
+                            </div>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>  
+                        </div>
                     </div>
                 </div>
             </div>
@@ -138,10 +140,10 @@
     </section>
     <footer>
         <div class="social-icons">
-            <img src="./image/insta.svg">
-            <img src="./image/linkedin.svg">
-            <img src="./image/twitter.svg">
-            <img src="./image/fb.svg">
+            <a href="https://www.instagram.com/a_ziyan_30/"><img src="./image/insta.svg"></a>
+            <a href="https://www.linkedin.com/in/ziyanalimurtaza/?_l=en_US"><img src="./image/linkedin.svg"></a>
+           <a href="https://mobile.twitter.com/deadlyvision4u"><img src="./image/twitter.svg"></a>
+            <a href="https://www.facebook.com/DEADLYVISION4U"><img src="./image/fb.svg"></a>
         </div>
         <p>Copyright ©2020 All rights reserved</p>
     </footer>
