--- a/index.html
+++ b/index.html
@@ -126,23 +126,30 @@
         </div>
         <div class="control">
           <div class="featured-list">
-            <div class="featured-item">
-              <div class="fs-left">
-                <img src="./image/Rectangle 30.png" alt="first-image" />
-              </div>
-              <div class="fs-right">
-                <h3>Designing web structures</h3>
-                <div class="fs-mid">
-                  <div class="badge">2022</div>
-                  <div class="category">Web Design</div>
+            <a
+              href="https://ziyanali.hashnode.dev/mastering-binary-tree-construction-with-linked-list-a-comprehensive-guide-for-2023"
+              style="text-decoration: none"
+              target="_blank"
+            >
+              <div class="featured-item">
+                <div class="fs-left">
+                  <img src="./image/Rectangle 30.png" alt="first-image" />
                 </div>
-                <p>
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                  amet sint. Velit officia consequat duis enim velit mollit.
-                  Exercitation veniam consequat sunt nostrud amet.
-                </p>
+                <div class="fs-right">
+                  <h3>Mastering Binary Trees in C++</h3>
+                  <div class="fs-mid">
+                    <div class="badge">2023</div>
+                    <div class="category">Data Structures</div>
+                  </div>
+                  <p>
+                    Discover the power of linked lists in constructing binary
+                    trees. In this comprehensive guide, we'll walk you through
+                    the step-by-step process, whether you're a beginner or an
+                    experienced programmer.
+                  </p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <!-- second post section-->
           <div class="featured-list">
