--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           ><img src="./image/insta.svg" alt="Insta"
         /></a>
         <a href="https://www.linkedin.com/in/ziyanalimurtaza/?_l=en_US"
-          ><img src="./image/linkedin.svg" alt="linked-in"
+          ><img src="./image/Linkedin.svg" alt="linked-in"
         /></a>
         <a href="https://mobile.twitter.com/deadlyvision4u"
           ><img src="./image/twitter.svg" alt="twitter"
